--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -436,6 +436,10 @@
     |
     <a href="https://mp.weixin.qq.com/s/bMESRXRVl0fPIYwsW3KoGg" target="_blank">自然语言处理顶会ACL 2023收录西湖大学工学院最新成果</a>
     |
+    <a href="https://mp.weixin.qq.com/s/lWumoCqKnkPrMBjpPuGM1w" target="_blank">多篇论文入选ICASSP 2023！火山语音有效解决多类实践问题</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Prg_iwcbbC7QMup_i1ZHzw" target="_blank">LeCun力挺，马毅教授五年集大成之作：完全数学可解释的白盒Transformer，性能不输ViT</a>
+    |
     <br/>
     <a href="https://mp.weixin.qq.com/s/TDWEGWe1zJrY5af5lIORAw" target="_blank">CCCF精选｜机器学习：从先验假设到自动化——迈向通用人工智能的必然步骤</a>
     |
@@ -1425,7 +1429,12 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/5nAVmBPZg-CBWiFpePWi5w" target="_blank">一文速览大语言模型在推荐系统中的应用</a>
     | 
     <a href="https://mp.weixin.qq.com/s/qeK_LUXkNaPMQI1N0DJDIQ" target="_blank">YuLan-RETA-LLM：在大语言模型中使用检索</a>
-    |            
+    |
+    <!-- 6.8 -->
+    <a href="https://mp.weixin.qq.com/s/lDeS0hMjYnEiOrcNEMHGoQ" target="_blank">国际中文教育大模型“桃李” 1.0发布</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/fU_21S5huOJDhrMRcqDcBQ" target="_blank">给语言大模型加上综合视听能力，达摩院开源Video-LLaMA</a>
+    |             
 </br>
 </br>
 AI论文: 
