--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -347,17 +347,18 @@
     |
     <a href="https://pricai.org/2023/" target="_blank">PRICAI</a>
     |   
-<!-- SE - C-->
+<!-- database - C -->
+    <a href="https://www.dexa.org/dexa2023" target="_blank">DEXA</a>
+    |
+<!-- software engineering - C-->
     <a href="http://ksiresearch.org/seke/seke23.html" target="_blank">SEKE</a>
     |
     <a href="https://conf.researchr.org/home/ease-2023#:~:text=EASE%20is%20an%20internationally%20leading%20venue%20for%20academics,2023%20and%20hosted%20by%20The%20University%20of%20Oulu." target="_blank">EASE</a>
     |
     <a href="https://conf.researchr.org/home/internetware-2023" target="_blank">Internetware</a>
     |
-<!-- database - C -->
-    <a href="https://www.dexa.org/dexa2023" target="_blank">DEXA</a>
-    |
-<!-- software engineering - C-->     
+    <a href="https://qrs23.techconf.org/submission" target="_blank">QRS</a>
+    |     
     <a href="https://conf.researchr.org/home/apsec-2023" target="_blank">APSEC</a>
     |
     <a href="#" target="_blank">MSR</a>
@@ -1188,6 +1189,8 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/yu8aTglovZEvNqcUamclqg" target="_blank">他山之石丨图灵奖得主LeCun：ChatGPT局限巨大，自回归模型寿命不超5年</a>
     |
+    <a href="https://mp.weixin.qq.com/s/CjwkWqgXFz6FaCqY_AE-Tw" target="_blank">后GPT时代，多模态是最大的机会</a>
+    |
   <!-- 5.5 -->
     <a href="https://mp.weixin.qq.com/s/L3-Byo-DciVDrADwNmKQvg" target="_blank">ChatGPT调研报告（2023）</a>
     |  
@@ -1434,7 +1437,17 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/lDeS0hMjYnEiOrcNEMHGoQ" target="_blank">国际中文教育大模型“桃李” 1.0发布</a>
     | 
     <a href="https://mp.weixin.qq.com/s/fU_21S5huOJDhrMRcqDcBQ" target="_blank">给语言大模型加上综合视听能力，达摩院开源Video-LLaMA</a>
-    |             
+    |
+    <a href="https://mp.weixin.qq.com/s/vBMKXUJoAIywkXY2nY60eA" target="_blank">HealthGPT：华工数字孪生人实验室发布主动健康大模型基座</a>
+    |
+    <!-- 6.9 -->
+    <a href="https://mp.weixin.qq.com/s/PAJrnvxl2YmUNjEN0GjxpA" target="_blank">多模态的过渡态——Latent Modal</a>
+    | 
+    <!-- 6.10 -->
+    <a href="https://mp.weixin.qq.com/s/YCAjzPeSLwvp2lHw12ORiA" target="_blank">对谈微软154页刷屏论文作者：内部版GPT-4更惊艳，已展现出AGI的特征</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/-GYusDw9KvVDmFjJwqXpZw" target="_blank">大模型热潮之后的未来新方向：图神经网络与组合优化 | 文献汇总</a>
+    |               
 </br>
 </br>
 AI论文: 
@@ -3508,6 +3521,9 @@ Biochemistry Field：
     |
 <!-- Zhejiang University -->
     <a href="https://ylab.top/jieyang/" target="_blank">Jie Yang [<a href="https://ylab.top/" target="_blank">YLab</a>]</a>
+    |
+<!-- Rensselaer Polytechnic Institute -->
+    <a href="https://futianfan.github.io/" target="_blank">Tianfan Fu</a>
     |
   <br />
   <br />
