--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -194,6 +194,9 @@
 <!-- software engineering - A-->
    <a href="https://conf.researchr.org/track/icse-2024/icse-2024-research-track" target="_blank">ICSE</a>
     |
+<!-- visualization - A-->
+    <a href="https://chi2024.acm.org/" target="_blank">CHI</a>
+    | 
 <!-- semantic web - B-->
     <a href="" target="_blank">EMNLP</a>
     |   
@@ -234,6 +237,15 @@
     |
     <a href="#" target="_blank">CAiSE</a>
     |
+<!-- Neural network - C--> 
+    <a href="" target="_blank">ICONIP</a>
+    |
+    <a href="https://www.ai-edge.net/" target="_blank">KSEM</a>
+    |
+    <a href="" target="_blank">ESWC</a>
+    |
+    <a href="" target="_blank">PRICAI</a>
+    |  
     <br/>
 
 
@@ -268,6 +280,9 @@
     |
     <a href="#" target="_blank">ICAPS</a>
     |
+<!-- visualization - A-->
+    <a href="https://chi2023.acm.org/" target="_blank">CHI</a>
+    | 
 <!-- data mining - B-->     
     <a href="http://www.cloud-conf.net/icdm2023/index.html" target="_blank">ICDM</a>
     |
@@ -1433,6 +1448,10 @@ ChatGPT:
     | 
     <a href="https://mp.weixin.qq.com/s/qeK_LUXkNaPMQI1N0DJDIQ" target="_blank">YuLan-RETA-LLM：在大语言模型中使用检索</a>
     |
+    <a href="https://mp.weixin.qq.com/s/ahIgJ09u3oZAOlSfWHAHDg" target="_blank">对大模型微调后竟能超越ChatGPT！只需要让模型模拟真实的人类交互！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/4pkvMwZauZBzRw_d0CYH6A" target="_blank">NLP还能做什么？北航、ETH、港科大、中科院等多机构联合发布百页论文，系统阐述后ChatGPT技术链</a>
+    |     
     <!-- 6.8 -->
     <a href="https://mp.weixin.qq.com/s/lDeS0hMjYnEiOrcNEMHGoQ" target="_blank">国际中文教育大模型“桃李” 1.0发布</a>
     | 
@@ -1440,14 +1459,42 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/vBMKXUJoAIywkXY2nY60eA" target="_blank">HealthGPT：华工数字孪生人实验室发布主动健康大模型基座</a>
     |
+    <a href="https://mp.weixin.qq.com/s/RJdAEDn-PNFDs82FPum3Yw" target="_blank">汇集了23年7省高考作文题，围观ChatGPT和GPT-4写高考作文</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/uNe_ji79yb9jV_RNkjvTZg" target="_blank">Nature重磅！Google DeepMind推出AlphaDev，用AI打破十年算法封印！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/IrHXC9UWZfhc0BrG63FhLQ" target="_blank">2023最火“双赛道”开启报名！大模型评估与视频理解两个最热赛题，赢十万奖金</a>
+    |   
     <!-- 6.9 -->
     <a href="https://mp.weixin.qq.com/s/PAJrnvxl2YmUNjEN0GjxpA" target="_blank">多模态的过渡态——Latent Modal</a>
     | 
+    <a href="https://mp.weixin.qq.com/s/ZzmPAv4A9U5qSkNT3a1Psg" target="_blank">只给大模型LeetCode编号，也能解题！大模型表现好是源于对训练数据的记忆吗？请不要迷信大模型</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/3RLCVQg2QJGSiDUtx9DgPg" target="_blank">陈丹琦团队新作：单卡A100可训300亿参数模型啦！</a>
+    |  
     <!-- 6.10 -->
     <a href="https://mp.weixin.qq.com/s/YCAjzPeSLwvp2lHw12ORiA" target="_blank">对谈微软154页刷屏论文作者：内部版GPT-4更惊艳，已展现出AGI的特征</a>
     | 
     <a href="https://mp.weixin.qq.com/s/-GYusDw9KvVDmFjJwqXpZw" target="_blank">大模型热潮之后的未来新方向：图神经网络与组合优化 | 文献汇总</a>
-    |               
+    |
+    <a href="https://mp.weixin.qq.com/s/DJnP-T1cMb6KJUfvTdHEkw" target="_blank">GPT-4打脸DeepMind：你的顶级排序优化算法，我两条提示就搞定了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/49MwHw2YWwk6dRXKRcA-Ag" target="_blank">悟道3.0全面开源！LeCun VS Max 智源大会最新演讲</a>
+    |
+    <!-- 6.12 -->
+    <a href="https://mp.weixin.qq.com/s/lAFOCxfoVb0r3NyhpTYw8Q" target="_blank">大模型当私人法律顾问？北大团队推出法律大模型，数据与模型全部开源！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/cdBb-9M-AFy6XsEfF92bQA" target="_blank">首周下载量碾压ChatGPT！谷歌前员工创第二个Open AI？</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/TH3n1DM3IuaUpZ536F8iIw" target="_blank">OpenAI CEO中国首次演讲，称未来十年出现超强AI系统！AGI安全治理是重点</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/2ye6Ewuxqr7dWcu8YQn33A" target="_blank">Graph-ToolFormer: 受最新的ChatGPT和Toolformer模型的启发的Graph-ToolFormer</a>
+    |  
+    <!-- 6.13 -->
+    <a href="https://mp.weixin.qq.com/s/S87pxME33H-LMbzxzRCpjg" target="_blank">LLM推理提速2.8倍，CMU提出「投机式推理」引擎SpecInfer，小模型撬动大模型高效推理</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/S7mdekYTgJJM6UWskvEHjg" target="_blank">视频版Midjourney免费开放啦！一句话生成影视级大片！</a>
+    |                     
 </br>
 </br>
 AI论文: 
@@ -2511,6 +2558,8 @@ AI Big Model:
     <a href="https://mp.weixin.qq.com/s/BZmvqOxi5Gb454aiwSrxgA" target="_blank">这篇罕见的符号编程论文，让你在Jupyter Notebook中手绘草图并变成代码</a>
     |
     <a href="https://mp.weixin.qq.com/s/I1U_BGCj_BSRNexhRFTm_Q" target="_blank">谷歌大动作！TPU超算系统大升级，全面超越英伟达A100</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/C-dTAnqaMWE3EVsrQJkGZA" target="_blank">免费送GPU算力，轻松跑模型！趋动云GPU平台推荐</a>
     |
 <!--   <br /> -->
 
