--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -417,6 +417,9 @@
     |
     <a href="https://ijckg2023.knowledge-graph.jp/index.html" target="_blank">IJCKG</a>
     |
+<!-- service computing -->
+    <a href="https://icsoc2023.diag.uniroma1.it/" target="_blank">ICSOC</a>
+    |
 <!--  -->
     <a href="http://www.prai.net/" target="_blank">PRAI</a>
     |
