--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1497,7 +1497,22 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/S87pxME33H-LMbzxzRCpjg" target="_blank">LLM推理提速2.8倍，CMU提出「投机式推理」引擎SpecInfer，小模型撬动大模型高效推理</a>
     |
     <a href="https://mp.weixin.qq.com/s/S7mdekYTgJJM6UWskvEHjg" target="_blank">视频版Midjourney免费开放啦！一句话生成影视级大片！</a>
-    |                     
+    |
+    <!-- 6.14 -->
+    <a href="https://mp.weixin.qq.com/s/gzjV1NcX8RoFK4qHQcAvqA" target="_blank">ChatGPT大更新！API新增杀手级能力还降价，新模型、4倍上下文都来</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/NT3nxQvM9JKNJWGKTyo25Q" target="_blank">Nature发AIGC禁令！投稿中视觉内容使用AI的概不接收</a>
+    |
+    <!-- 6.15 -->
+    <a href="https://mp.weixin.qq.com/s/bp7ObjFGrFVu9KGtKy14Bg" target="_blank"> LeCun世界模型出场！Meta震撼发布首个「类人」模型，理解世界后补全半张图，自监督学习众望所归</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/vge4CJbBfLXFIYYyNC12Hw" target="_blank"> Mind2Web: 首个全面衡量大模型上网能力的数据集</a>
+    |
+    <!-- 6.16 -->
+    <a href="https://mp.weixin.qq.com/s/cBvkAKsGrTrKt9Pm0O9MMw" target="_blank">紫东太初全模态大模型来了，一个模型打通感知、认知、决策交互屏障</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/hKDhiYWVVgeHx49H0y-opQ" target="_blank">斯坦福最新LLM排行榜发布！自家Alpaca垫底，华人团队WizardLM开源第一，GPT-4、Claude稳居前二</a>
+    |                      
 </br>
 </br>
 AI论文: 
