--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -212,7 +212,7 @@
     |
     <a href="" target="_blank">IJCNN</a>
     |
-    <a href="" target="_blank">PAKDD</a>
+    <a href="http://pakdd24.pakdd.org/" target="_blank">PAKDD</a>
     |
     <a href="" target="_blank">ECIR</a>
     |
@@ -389,6 +389,8 @@
     <a href="http://cips-cl.org/static/CCL2023/index.html" target="_blank">CCL</a>
     |
     <a href="https://sigkg.cn/ccks2023/" target="_blank">CCKS</a>
+    |
+    <a href="http://www.cips-ir.org.cn/CCIR2023/" target="_blank">CCIR</a>
     |
     <a href="https://www.icwsm.org/2023/index.html/index.html#intro" target="_blank">ICWSM</a>
     |
@@ -1512,7 +1514,43 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/cBvkAKsGrTrKt9Pm0O9MMw" target="_blank">紫东太初全模态大模型来了，一个模型打通感知、认知、决策交互屏障</a>
     |
     <a href="https://mp.weixin.qq.com/s/hKDhiYWVVgeHx49H0y-opQ" target="_blank">斯坦福最新LLM排行榜发布！自家Alpaca垫底，华人团队WizardLM开源第一，GPT-4、Claude稳居前二</a>
-    |                      
+    | 
+    <a href="https://mp.weixin.qq.com/s/z-GaD0l4iglo0087sMuqUw" target="_blank">大模型行至深处，「悟道」如何走好全面开源之路？</a>
+    |
+    <!-- 6.17 -->
+    <a href="https://mp.weixin.qq.com/s/l3v5BDkZU1Ni9hKYlJY1mw" target="_blank">陶哲轩自曝用了「满血」GPT-4：人类对信息技术的期待全部需要校准</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/SDU55mLPzaQZdI3MSDX9PA" target="_blank">LLM in Medical Domain: 大语言模型在医学领域的应用</a>
+    |
+    <!-- 6.18 -->
+    <a href="https://mp.weixin.qq.com/s/YthUeE-0wvWhMQdTHWH3dg" target="_blank">陶哲轩自曝用了「满血」GPT-4：人类对信息技术的期待全部需要校准</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/cMPOkdZMT7THzo_y0gmDWg" target="_blank">语音领域的GPT时刻：Meta 发布「突破性」生成式语音系统，一个通用模型解决多项任务</a>
+    | 
+    <!-- 6.19 -->
+    <a href="https://mp.weixin.qq.com/s/A3flqm2FeOn0WQr5mrD1-Q" target="_blank">华盛顿大学提出全新量化和微调方法，在DB-GPT上享受33B参数的LLM</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/2Xnd5oazFpvTLinVlFh0WQ" target="_blank">AI2:仅凭开源数据，可达ChatGPT 83%表现</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/Tnyk2So-4Dhbvbm8WJ1e0w" target="_blank">AI，正在疯狂污染中文互联网</a>
+    |   
+    <!-- 6.20 -->
+    <a href="https://mp.weixin.qq.com/s/wBQmOMTYkdLAM3qNWY-TiQ" target="_blank">对话竹间智能简仁贤：做大模型不能唱高调，企业需要低成本、平民化的模型产品</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/xVj1blhRtpO-Y1HgQ8Wl-A" target="_blank">清华发布 KoLA 评测集，分4个认知层级评测LLM，GPT-4竟不是第一？</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/B5YodlEW-WfIQ7MZPfcU5Q" target="_blank">普林斯顿大学推出Infinigen AI模型，100%创造大自然，逼真到炸裂｜CVPR 2023</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/76fm1Dxl4rYPch_DSzEJEQ" target="_blank">ChatGPT落入陷阱！网友诱骗ChatGPT激活 Windows 11</a>
+    |
+    <!-- 6.21 -->
+    <a href="https://mp.weixin.qq.com/s/LjtwSCH2IGRaiDmdEGonWw" target="_blank">GLM 大加强，清华团队推出 GLM 联网加强版 WebGLM！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Hhm3Z3lHfiQFsG7QVyejyg" target="_blank">GPT-Engineer一夜爆火！一个提示生成整个代码库，GitHub狂飙19k星</a>
+    |
+    <!-- 6.22 -->
+    <a href="https://mp.weixin.qq.com/s/3kNqhdfZz6FEFvWey1lPIQ" target="_blank">我把GPT的学习轨迹可视化了！竟和人类十分类似 ｜ACL2023</a>
+    |  
 </br>
 </br>
 AI论文: 
@@ -3241,6 +3279,13 @@ NLP Field：
 <!-- Southern University of Science and Technology (SUSTech) -->
     <a href="https://ghchen.me/" target="_blank">Guanhua Chen</a>
     |    
+  <br />
+  <br />
+Language Model Field：
+<br />
+<!-- HKUST -->
+    <a href="https://jxhe.github.io/" target="_blank">Junxian He</a>
+    |
   <br />
   <br />
 Commonsense Knowledge Field：
