--- a/index.html
+++ b/index.html
@@ -58,17 +58,18 @@
 <div class="content">
 <div class="container">
 
+<!-- School of Big Data and Software Engineering -->
 <p>
 <img width="200" high="330" src="./img/profile.jpg" align="right" alt="this is me">
 </p><h2>Yongpan Sheng (盛泳潘 in Chinese)</h2>
-School of Big Data and Software Engineering<br/>
+College of Computer and Information Science<br/>
 Chongqing University<br/> 
 Chongqing, China<br/>
 <!-- NSW 2052 Australia<br> -->
 <br />
 <br />
 <!-- Phone: (+61) 423-167-393<br> -->
-Email: shengyp2011(at){gmail,163}(dot)com<br>
+Email: shengyp2011(at){163,gmail}(dot)com<br>
 <!-- <br /> -->
 <a href="https://github.com/shengyp/"><i class="fab fa-github"></i></a>
 <a href="https://scholar.google.com/citations?hl=en&user=DSIemtYAAAAJ"><i class="ai ai-google-scholar-square ai-1x"></i></a>
