--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <img width="200" high="330" src="./img/profile.jpg" align="right" alt="this is me">
 </p><h2>Yongpan Sheng (盛泳潘 in Chinese)</h2>
 College of Computer and Information Science<br/>
-Chongqing University<br/> 
+Southwest University<br/> 
 Chongqing, China<br/>
 <!-- NSW 2052 Australia<br> -->
 <br />
