--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -264,6 +264,9 @@
     |
     <a href="https://www.vldb.org/2023/?call-for-research-track" target="_blank">VLDB</a>
     |
+<!-- information retrieval -->
+    <a href="https://sigir.org/sigir2023/" target="_blank">SIGIR</a>
+    |
 <!-- hybrid - A-->
     <a href="https://ijcai-22.org/" target="_blank">IJCAI</a>
     |
@@ -449,6 +452,8 @@
     <a href="https://ccbr99.cn/" target="_blank">CCBR</a>
     |
     <a href="https://www.prcv2023.cn/2023prcv/" target="_blank">PRCV</a>
+    |
+    <a href="https://mobile.ccf.org.cn/web/html7/index.html?globalId=m1096157383488573440168138588584&type=1" target="_blank">CBC</a>
     |
     <br/>
     <a href="https://mp.weixin.qq.com/s/RyottZj01o-H9OvuST8jJg" target="_blank">Soundness？Excitement？官方解读ACL 2023论文评分机制</a>
@@ -1548,9 +1553,44 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/Hhm3Z3lHfiQFsG7QVyejyg" target="_blank">GPT-Engineer一夜爆火！一个提示生成整个代码库，GitHub狂飙19k星</a>
     |
+    <a href="https://mp.weixin.qq.com/s/3f4KKNW_Y_GSBjvAreLuXQ" target="_blank">Data-Copilot: 大语言模型做你最贴心省事的数据助手</a>
+    |
     <!-- 6.22 -->
     <a href="https://mp.weixin.qq.com/s/3kNqhdfZz6FEFvWey1lPIQ" target="_blank">我把GPT的学习轨迹可视化了！竟和人类十分类似 ｜ACL2023</a>
-    |  
+    |
+    <a href="https://mp.weixin.qq.com/s/54J2SJ0z2FmZR-8tOzvEEQ" target="_blank">代码大战白热化：WizardCoder挑落Bard及Claude，性能直追ChatGPT</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/3kNqhdfZz6FEFvWey1lPIQ" target="_blank">我把GPT 的学习轨迹可视化了！竟和人类十分类似 ｜ACL2023</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/3hBwSIKgiPcSXlFopNpYvw" target="_blank">比HuggingFace快24倍！伯克利神级LLM推理系统开源，碾压SOTA，让GPU砍半</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/MOsJ_vqLJvftTaTYNpBqAg" target="_blank">GPT-4参数最新爆料！1.76万亿参数，8个2200亿MoE模型，PyTorch创始人深信不疑 </a>
+    |
+    <!-- 6.25 -->
+    <a href="https://mp.weixin.qq.com/s/ErXWbgCXUpSG3dTuW_ORMQ" target="_blank">ChatGPT 讲的笑话90%是重复的？归纳出来只有这25个？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/-raMI-WEgxxbTJzMi0xtTw" target="_blank">黑客曝ChatGPT三大新功能：记住你是谁/上传文件/切换工作区，客户端源代码已被扒光</a>
+    |
+    <!-- 6.26 -->
+    <a href="https://mp.weixin.qq.com/s/YfWTYXDUO6m8KK27BHfOBA" target="_blank">让GPT-3、ChatGPT、GPT-4一起做脑筋急转弯，GPT-4一骑绝尘！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/CGF-rez1tdF49zHsSjFY9g" target="_blank">ChatGLM2发布！中文榜单开源模型排名第一！8-32k上下文，推理提速42%</a>
+    |
+    <!-- 6.27 -->
+    <a href="https://mp.weixin.qq.com/s/mAFl08ODOWJmr0dDq-wJ6w" target="_blank">爆火DragGAN正式开源，GitHub近18k星！清华校友带GAN逆袭，大象一秒P转身</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/9PFBqxeUkYEh5RK2GFaM6Q" target="_blank">百万奖金悬赏大模型不擅长的任务！这 11 个任务模型越大，效果越差！</a>
+    |     
+    <!-- 6.28 -->
+    <a href="https://mp.weixin.qq.com/s/GRjUTnf5H0VX_DpwewOsLw" target="_blank">ChatGPT「奶奶漏洞」又火了！扮演过世祖母讲睡前故事，骗出Win11序列号</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/wcItIWImWLwsYic4PvHwcQ" target="_blank">微软发布「升级版」多模态大模型 Kosmos-2！新增局部理解能力，解锁实体级交互</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/wcItIWImWLwsYic4PvHwcQ" target="_blank">法律大模型的突围，千亿参数级PowerLawGLM重磅发布！</a>
+    |
+    <!-- 6.29 -->
+    <a href="https://mp.weixin.qq.com/s?__biz=MzkzNzIyNDg4MQ==&mid=2247547610&idx=1&sn=3d525e910050d33a1e09455623992796&chksm=c290c504f5e74c1252a3c6cf13d9e2df5d03c7ff78f1e320ddbf1f29f6551901d7f4fe1d5cb3&mpshare=1&scene=1&srcid=0629CIqeEqlUjGJbj0YLKsxP&sharer_sharetime=1688005391895&sharer_shareid=c6589e00551f6949328d3c122803ed01#rd" target="_blank">上海AI实验室开源全球首个医疗基础模型群，引领“医疗大模型时代”</a>
+    |      
 </br>
 </br>
 AI论文: 
