--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1590,7 +1590,14 @@ ChatGPT:
     |
     <!-- 6.29 -->
     <a href="https://mp.weixin.qq.com/s?__biz=MzkzNzIyNDg4MQ==&mid=2247547610&idx=1&sn=3d525e910050d33a1e09455623992796&chksm=c290c504f5e74c1252a3c6cf13d9e2df5d03c7ff78f1e320ddbf1f29f6551901d7f4fe1d5cb3&mpshare=1&scene=1&srcid=0629CIqeEqlUjGJbj0YLKsxP&sharer_sharetime=1688005391895&sharer_shareid=c6589e00551f6949328d3c122803ed01#rd" target="_blank">上海AI实验室开源全球首个医疗基础模型群，引领“医疗大模型时代”</a>
-    |      
+    | 
+    <a href="https://mp.weixin.qq.com/s/dBc9g-vgVOz9U6L5oNRulA" target="_blank">ACL2023 | 赔了？引入GPT-3大模型到智能客服，竟要赔钱？ </a>
+    |
+    <!-- 6.30 -->
+    <a href="https://mp.weixin.qq.com/s/ZUIOt8G4sgOwouBkrv_Giw" target="_blank">多模态大语言模型综述来啦！一文带你理清多模态关键技术</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/aaMtW-ELfh8aFaG-1FZtVw" target="_blank">陶哲轩预言成真！MIT加州理工让ChatGPT可以证明数学定理了</a>
+    |           
 </br>
 </br>
 AI论文: 
