--- a/pages/activities.html
+++ b/pages/activities.html
@@ -123,6 +123,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, The 30th International Conference on Neural Information Processing (<a href="http://www.iconip2023.org/index.html"><strong><u><font color="#874e26">ICONIP 2023</font></u></strong></a>), Changsha, China, November 20-23, 2022</li>
+
+
     <li><strong>Invited Reviewer</strong>, The 22nd China National Conference on Computational Linguistics (<a href="http://cips-cl.org/static/CCL2023/index.html"><strong><u><font color="#874e26">CCL 2023</font></u></strong></a>), Haerbing, China, August 3-5, 2023</li>
 
 
