--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1548,6 +1548,8 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/76fm1Dxl4rYPch_DSzEJEQ" target="_blank">ChatGPT落入陷阱！网友诱骗ChatGPT激活 Windows 11</a>
     |
+    <a href="https://mp.weixin.qq.com/s/qQO2frpnqWbKrWmg3NvqWw" target="_blank">大模型的涌现能力 (Emergent Abilities of LLM)</a>
+    | 
     <!-- 6.21 -->
     <a href="https://mp.weixin.qq.com/s/LjtwSCH2IGRaiDmdEGonWw" target="_blank">GLM 大加强，清华团队推出 GLM 联网加强版 WebGLM！</a>
     |
@@ -1570,6 +1572,8 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/ErXWbgCXUpSG3dTuW_ORMQ" target="_blank">ChatGPT 讲的笑话90%是重复的？归纳出来只有这25个？</a>
     |
     <a href="https://mp.weixin.qq.com/s/-raMI-WEgxxbTJzMi0xtTw" target="_blank">黑客曝ChatGPT三大新功能：记住你是谁/上传文件/切换工作区，客户端源代码已被扒光</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/dWqvv8OtpJdBV-pfpCLbKg" target="_blank">对话丨周伯文：通用大模型如何突破垂直行业场景？</a>
     |
     <!-- 6.26 -->
     <a href="https://mp.weixin.qq.com/s/YfWTYXDUO6m8KK27BHfOBA" target="_blank">让GPT-3、ChatGPT、GPT-4一起做脑筋急转弯，GPT-4一骑绝尘！</a>
@@ -1597,7 +1601,22 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/ZUIOt8G4sgOwouBkrv_Giw" target="_blank">多模态大语言模型综述来啦！一文带你理清多模态关键技术</a>
     | 
     <a href="https://mp.weixin.qq.com/s/aaMtW-ELfh8aFaG-1FZtVw" target="_blank">陶哲轩预言成真！MIT加州理工让ChatGPT可以证明数学定理了</a>
-    |           
+    |
+    <a href="https://mp.weixin.qq.com/s/XYV4bp4taoIyL7HWF-7lHQ" target="_blank">大模型浪潮下的平台、框架、AI编译器和芯片架构丨2023智源大会精彩回顾</a>
+    |
+    <!-- 7.1 -->
+    <a href="https://mp.weixin.qq.com/s/ZUIOt8G4sgOwouBkrv_Giw" target="_blank">多模态大语言模型综述来啦！一文带你理清多模态关键技术</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/JXQvwdBl2JrSbBwGB1h9_A" target="_blank">中科院计算所推出多语言大模型「百聆」，我们已经上手聊起来了（10个邀请码）</a>
+    |
+    <!-- 7.2 -->
+    <a href="https://mp.weixin.qq.com/s/2Z7gbbyDiJJOhETpjwWRTQ" target="_blank">「ChatGPT 对比与检测」研究项目被 LLM@IJCAI'23 收录！研究回顾</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/yMmUlR302rIXK3znFTJrLQ" target="_blank">国产大模型进展神速！清华大学NLP小组发布顶尖多模态大模型：VisCPM，支持文本生成图片与多模态对话，图片理解能力优秀！</a>
+    |
+    <!-- 7.4 -->
+    <a href="https://mp.weixin.qq.com/s/meQgzDcMZYq8LDryURENXg" target="_blank">知识工场实验室发布通用大模型KW-CuteGPT-13B和大模型学科知识评测基准獬豸（XIEZHI）</a>
+    |               
 </br>
 </br>
 AI论文: 
@@ -3281,8 +3300,9 @@ NLP/KG Field：
     <a href="https://sites.google.com/site/zhaosendong/sendong-stan-zhao-%E8%B6%99%E6%A3%AE%E6%A3%9F" target="_blank">Sendong Zhao</a>
     |
 <!-- HIT -->
-    <a href="http://sim.whu.edu.cn/info/1054/10981.htm" target="_blank">Liang Hong</a>
+    <a href="http://www.li-jing.com/index.html" target="_blank">Jing Li</a>
     |
+
 <!-- Northeastern University -->
     <a href="http://faculty.neu.edu.cn/renfeiliang/zh_CN/zdylm/262580/list/index.htm" target="_blank">Feiliang Ren</a>
     |
