--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -180,6 +180,8 @@
 <!-- network - A -->
     <a href="https://infocom2024.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
     |
+    <a href="https://icc2024.ieee-icc.org/" target="_blank">ICC</a>
+    |
 <!-- Knowledge engineering - A-->
     <a href="" target="_blank">ACL</a>
     |
@@ -1616,7 +1618,22 @@ ChatGPT:
     |
     <!-- 7.4 -->
     <a href="https://mp.weixin.qq.com/s/meQgzDcMZYq8LDryURENXg" target="_blank">知识工场实验室发布通用大模型KW-CuteGPT-13B和大模型学科知识评测基准獬豸（XIEZHI）</a>
-    |               
+    | 
+    <a href="https://mp.weixin.qq.com/s/C3dmJrQtgcRH14OWCtiBgw" target="_blank">朱啸虎：ChatGPT对创业公司很不友好，未来两三年内请大家放弃融资幻想</a>
+    |
+    <!-- 7.5 -->
+    <a href="https://mp.weixin.qq.com/s/Tus_DBD9q9wM6eJzLxhuXA" target="_blank">还在对大模型做刷榜优化吗，错了！专业考试不是唯一基准</a>
+    |
+    <!-- 7.6 -->
+    <a href="https://mp.weixin.qq.com/s/K7e6mfCA7eWN_armMBH9UA" target="_blank">刚刚！OpenAI宣布，斥巨资建立「超级对齐」团队！向人类意图看齐</a>
+    |
+    <!-- 7.7 -->
+    <a href="https://mp.weixin.qq.com/s/nudItInBhwdZUQeBVst3FA" target="_blank">Data-Copilot: 大语言模型做你最贴心省事的数据助手</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/RWKpnNPOQsqKgqSq93_Lgw" target="_blank">王炸！GPT-4 API 全面开放使用</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/ZkfPvF6LArECJtHQLC0DaA" target="_blank">VisCPM：迈向多语言多模态大模型时代</a>
+    |                    
 </br>
 </br>
 AI论文: 
