--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -3348,7 +3348,9 @@ NLP/KG Field：
 Temporal KG Representation Learning Field：
 <br />
     <a href="http://jsjytx.neuq.edu.cn/info/1037/1685.htm" target="_blank">Luyi Bai</a>
-    |    
+    |
+    <a href="https://hd.hainanu.edu.cn/cs/info/1198/2476.htm" target="_blank">Jing Yang</a>
+    |     
   <br />
   <br />
 GNN Field：
