--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -3737,6 +3737,8 @@ Food Computation Field：
     |
     <a href="https://vipl.ict.ac.cn/people/wqmin/" target="_blank">Weiqing Min</a>
     |
+    <a href="http://tianyijun.com/" target="_blank">Yijun Tian</a>
+    |
   <br />
   <br />
 Image and Graphics Field：
