--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -3739,6 +3739,8 @@ Food Computation Field：
     |
     <a href="http://tianyijun.com/" target="_blank">Yijun Tian</a>
     |
+    <a href="https://sites.google.com/site/diyali916/" target="_blank">Diya Li</a>
+    |
   <br />
   <br />
 Image and Graphics Field：
