--- a/pages/activities.html
+++ b/pages/activities.html
@@ -309,6 +309,11 @@
     <li><strong>Invited Reviewer</strong>, Computer and Modernization (<a href="http://www.c-a-m.org.cn/CN/1006-2475/home.shtml"><strong><u><font color="#874e26">CM</font></u></strong></a>)</li>
 
 
+<!-- 2023.07.11 收到的审稿邀请 河南农业科学-->
+    <li><strong>Invited Reviewer</strong>, Journal of Henan Agricultural Sciences (<a href="http://www.hnnykx.org.cn/CN/1004-3268/home.shtml"><strong><u><font color="#874e26">JHAS</font></u></strong></a>)</li>
+
+
+
     <!-- \item {数据挖掘} -->
     <li><strong>Invited Reviewer</strong>, Hans Journal of Data Mining (<a href="https://www.hanspub.org/journal/HJDM.html"><strong><u><font color="#874e26">HJDM</font></u></strong></a>)</li>
 
