--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -221,7 +221,7 @@
     <a href="" target="_blank">UIC</a>
     |
 <!-- software engineering - B-->
-    <a href="" target="_blank">DASFAA</a>
+    <a href="https://www.dasfaa2024.org/" target="_blank">DASFAA</a>
     |
     <a href="" target="_blank">ETAPS</a>
     |
@@ -1633,7 +1633,31 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/RWKpnNPOQsqKgqSq93_Lgw" target="_blank">王炸！GPT-4 API 全面开放使用</a>
     | 
     <a href="https://mp.weixin.qq.com/s/ZkfPvF6LArECJtHQLC0DaA" target="_blank">VisCPM：迈向多语言多模态大模型时代</a>
-    |                    
+    |
+    <!-- 7.8 -->
+    <a href="https://mp.weixin.qq.com/s/QjCqlC6l4IMB4ARnNCXjwA" target="_blank">推特竞品上线7小时用户破1000万，马斯克：竞争可以，但不要作弊！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/urw8UHPUgWQLaoHyvsDJXg" target="_blank">王炸！GPT-4 API 全面开放使用</a>
+    |   
+    <!-- 7.10 -->
+    <a href="https://mp.weixin.qq.com/s/9WCvVj37_Nzdi8IL6SMg1g" target="_blank"> ChatGPT「代码解释器」正式解禁！30秒图片变视频，动嘴做表 | 十大惊人魔法全集</a>
+    |
+    <!-- 7.11 -->
+    <a href="https://mp.weixin.qq.com/s/EdSIJXHTsnxS25nCaOhLOw" target="_blank"> 搞不定高考的ChatGPT，原来只有小学4年级水平</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/ecdh84W_ZxJ5yoLA6YX8nw" target="_blank"> 地表最强Code Interpreter与Midjourney联动，5分做出大片，网友称「GPT-4.5」来了！</a>
+    |
+    <!-- 7.12 -->
+    <a href="https://mp.weixin.qq.com/s/FK0Ff5h-MNAN655MH0I4yQ" target="_blank"> GPT-4内幕大泄露！1.8万亿巨量参数，13万亿token训练，斥资6300万美元</a>
+    |     
+    <!-- 7.13 -->
+    <a href="https://mp.weixin.qq.com/s/GbsYAAi6qY1i0ofdTItrVw" target="_blank"> GPT-4 最强竞争对手，Claude 杀疯了！</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/MccNQeMh6bq_6izS1Y-9kQ" target="_blank"> ChatGPT最强竞品Claude-2重磅升级！知识更新到23年，代码数学显著提升，免费可用</a>
+    |
+    <!-- 7.15 -->
+    <a href="https://mp.weixin.qq.com/s/Bo9svsFx0hoEYxPU8LCwJg" target="_blank"> ChatGLM2-6B，免费商用了！</a>
+    |                          
 </br>
 </br>
 AI论文: 
@@ -3126,7 +3150,7 @@ AI Big Model:
     |
     <a href="https://www.cs.dartmouth.edu/~soroush/index.html" target="_blank">Soroush Vosoughi</a> 
     |
-    <a href="http://nlp.cs.rpi.edu/hengji.html" target="_blank">Heng Ji</a> 
+    <a href="https://cs.illinois.edu/about/people/faculty/hengji" target="_blank">Heng Ji</a> 
     |
     <a href="https://hanj.cs.illinois.edu/" target="_blank">Jiawei Han</a> 
     |
@@ -3598,7 +3622,9 @@ Visual Analytics Field:
 3D Vision System Field:
 <br />
     <a href="https://hughw19.github.io/" target="_blank">He Wang</a>
-    |       
+    | 
+    <a href="https://shanxinyuan.github.io/" target="_blank">Shanxin Yuan</a>
+    |        
   <br />
   <br />
 Distributional System Field：
