--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1657,7 +1657,21 @@ ChatGPT:
     |
     <!-- 7.15 -->
     <a href="https://mp.weixin.qq.com/s/Bo9svsFx0hoEYxPU8LCwJg" target="_blank"> ChatGLM2-6B，免费商用了！</a>
-    |                          
+    |
+    <!-- 7.16 -->
+    <a href="https://mp.weixin.qq.com/s/AFZWUg6eTgs2oM1-Wl0omQ" target="_blank"> 《人民日报》：大模型的竞争，是国家科技战略的竞争</a>
+    |  
+    <!-- 7.18 -->
+    <a href="https://mp.weixin.qq.com/s/Cka02BRM5LvnhTMey4Ai6g" target="_blank"> 墨子（Mozi）：首个科技领域大规模语言模型</a>
+    |
+    <!-- 7.20 -->
+    <a href="https://mp.weixin.qq.com/s?__biz=MzI5MTgwNTM4Mw==&mid=2247486707&idx=1&sn=8f8964773d94e624291df93fc2ac2b7c&chksm=ec0a4d5bdb7dc44d893883c1dce7e37bc66b7c6aac74eac3194b111c4b4aea9f882d3533fb82&mpshare=1&scene=23&srcid=07209Rb0QIHcmkvMfSp3ovM4&sharer_sharetime=1689844872099&sharer_shareid=9602898a9fe804c3ecc65b6170a8a721#rd" target="_blank"> 大模型微调方法总结</a>
+    |
+    <!-- 7.21 -->
+    <a href="https://mp.weixin.qq.com/s/C_g4pFZRO_yYwqno4qib1A" target="_blank"> 探究检索增强下的大模型知识边界</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/Ns0rohTH0xz3Y2pk2Upxng" target="_blank"> Google提出LaCLIP：大语言模型重写本文输入，让CLIP重焕光彩！</a>
+    |                            
 </br>
 </br>
 AI论文: 
@@ -2675,7 +2689,9 @@ AI Big Model:
     <a href="https://mp.weixin.qq.com/s?__biz=MzIwNzc2NTk0NQ==&mid=2247545200&idx=2&sn=841715268d0613e305278e8b0d22eb3e&chksm=970f19a6a07890b072de9fa9407d188c9b80b18ef754c87ab60345ed0ac8e6ae4b1a99582993&scene=126&sessionid=1678957154&subscene=227&key=5099f4dd3766303d4613a285f14c61afbf7628466bb0da35da9aef257d8a46527b855d2f1f6d0248f201b023f2e944818e592b7a8b710f0fb4987476d2eb133c297481d317210d0da18143054e8154398495e0334528d9cb272d4abdce5082eadebc21662226c85669579c3015bb1fb1376fe7cb1cbf52c3e87b4eb047968bf4&ascene=0&uin=NjI1MjE3OTQy&devicetype=Windows+10+x64&version=6309001c&lang=zh_CN&countrycode=CN&exportkey=n_ChQIAhIQwPk%2BHDb22Sdd7j0Khzo%2B9xLbAQIE97dBBAEAAAAAAKaGLk0s3SgAAAAOpnltbLcz9gKNyK89dVj0Ca7muIpPdbBDQJ0VoOUYXqR87P%2FP%2FkuC467GBdDTrZjiraPHFsnjbUSqRvPdrvYu%2BUg9JrJlfTJEYX0ZrOfidxDiRmvfk0RMx5FqWpZizOE0WMPTpcCwMB1EOHG3dQcqq%2B2TrAJ2nHBNMfzef%2Bq8NQk5klrnxeIRpaBFWk8ZdLbJ2JbkX37NaFKOz3RSl75XtB5a1gp97BNyb1aVRssaaCCEg2TG2J4%2F%2FhwFhn9Uq8d09zWptQ%3D%3D&acctmode=0&pass_ticket=%2B4sMkpWSdgE7DVxPfLwwdiC0NJyLzer%2BjQUSarkDhq8DLddF4%2F7IPJTOPz%2FUp9CkSGFzWiTvvHAnvwOzvKRt%2Bg%3D%3D&wx_header=1&fontgear=2" target="_blank">惊呼！在Mac上可以跑LLaMA啦！附上详细教程</a>
     | 
     <a href="https://mp.weixin.qq.com/s/LCGQyNA6sHcdfIIARSNlww" target="_blank">3090单卡5小时，每个人都能训练专属ChatGPT，港科大开源LMFlow</a>
-    |                        
+    |
+    <a href="https://mp.weixin.qq.com/s?__biz=MzI5MTgwNTM4Mw==&mid=2247486707&idx=1&sn=8f8964773d94e624291df93fc2ac2b7c&chksm=ec0a4d5bdb7dc44d893883c1dce7e37bc66b7c6aac74eac3194b111c4b4aea9f882d3533fb82&mpshare=1&scene=23&srcid=07209Rb0QIHcmkvMfSp3ovM4&sharer_sharetime=1689844872099&sharer_shareid=9602898a9fe804c3ecc65b6170a8a721#rd" target="_blank">大模型微调方法总结</a>
+    |                          
 <!--   <br /> -->
 
 <br />
