--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -210,7 +210,7 @@
     |
     <a href="" target="_blank">ICME</a>
     |
-    <a href="" target="_blank">ICMR</a>
+    <a href="http://icmr2024.org/index.html" target="_blank">ICMR</a>
     |
     <a href="" target="_blank">IJCNN</a>
     |
@@ -247,6 +247,23 @@
     <a href="" target="_blank">ESWC</a>
     |
     <a href="" target="_blank">PRICAI</a>
+    |
+<!-- software engineering - C-->
+    <a href="https://ksiresearch.org/seke/seke24.html" target="_blank">SEKE</a>
+    |
+    <a href="" target="_blank">EASE</a>
+    |
+    <a href="" target="_blank">Internetware</a>
+    |
+    <a href="" target="_blank">QRS</a>
+    |     
+    <a href="" target="_blank">APSEC</a>
+    |
+    <a href="" target="_blank">MSR</a>
+    |
+    <a href="https://2024.refsq.org/" target="_blank">REFSQ</a>
+    |
+    <a href="" target="_blank">ICWE</a>
     |  
     <br/>
 
@@ -1664,6 +1681,14 @@ ChatGPT:
     <!-- 7.18 -->
     <a href="https://mp.weixin.qq.com/s/Cka02BRM5LvnhTMey4Ai6g" target="_blank"> 墨子（Mozi）：首个科技领域大规模语言模型</a>
     |
+    <a href="https://mp.weixin.qq.com/s/vRexQOpTIrUwrONjvzoHpA" target="_blank"> 召唤GPT4多重人格，实力超群大幅减少幻觉！微软UIUC新工作释放大模型认知协同能力</a>
+    |
+    <!-- 7.19 -->
+    <a href="https://mp.weixin.qq.com/s/PJyFoLP7IBxjbswq-NBEkA" target="_blank"> 更强的Llama 2开源，可直接商用：一夜之间，大模型格局变了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/UxrBcPFPn8gvT6tKmLS7CQ" target="_blank"> 放弃评测大模型，普林斯顿大学已经开始评估Prompt了，提出Prompt评估框架</a>
+    |
+    
     <!-- 7.20 -->
     <a href="https://mp.weixin.qq.com/s?__biz=MzI5MTgwNTM4Mw==&mid=2247486707&idx=1&sn=8f8964773d94e624291df93fc2ac2b7c&chksm=ec0a4d5bdb7dc44d893883c1dce7e37bc66b7c6aac74eac3194b111c4b4aea9f882d3533fb82&mpshare=1&scene=23&srcid=07209Rb0QIHcmkvMfSp3ovM4&sharer_sharetime=1689844872099&sharer_shareid=9602898a9fe804c3ecc65b6170a8a721#rd" target="_blank"> 大模型微调方法总结</a>
     |
@@ -1671,7 +1696,8 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/C_g4pFZRO_yYwqno4qib1A" target="_blank"> 探究检索增强下的大模型知识边界</a>
     | 
     <a href="https://mp.weixin.qq.com/s/Ns0rohTH0xz3Y2pk2Upxng" target="_blank"> Google提出LaCLIP：大语言模型重写本文输入，让CLIP重焕光彩！</a>
-    |                            
+    |
+    <!-- 7.25 -->                            
 </br>
 </br>
 AI论文: 
