--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -216,7 +216,7 @@
     |
     <a href="http://pakdd24.pakdd.org/" target="_blank">PAKDD</a>
     |
-    <a href="" target="_blank">ECIR</a>
+    <a href="https://www.ecir2024.org/" target="_blank">ECIR</a>
     |
     <a href="" target="_blank">UIC</a>
     |
