--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -3613,6 +3613,9 @@ Geographic Information Systems Field：
 <!--  -->
     <a href="http://dky.njnu.edu.cn/info/1228/1745.htm" target="_blank">Xueying Zhang</a>
     |
+<!-- University of Minnesota (UMN) -->
+    <a href="https://zekun-li.github.io/#projects" target="_blank">Zekun Li</a>
+    |
   <br />
   <br />
 Medical Image Analysis
