--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1677,6 +1677,9 @@ ChatGPT:
     |
     <!-- 7.16 -->
     <a href="https://mp.weixin.qq.com/s/AFZWUg6eTgs2oM1-Wl0omQ" target="_blank"> 《人民日报》：大模型的竞争，是国家科技战略的竞争</a>
+    |
+    <!-- 7.17 -->
+    <a href="https://mp.weixin.qq.com/s/bL7ufvKrCc5-rFh_CceKmA" target="_blank"> 谷歌Bard最新更新：支持中文，还升级了ChatGPT都没有的识图功能</a>
     |  
     <!-- 7.18 -->
     <a href="https://mp.weixin.qq.com/s/Cka02BRM5LvnhTMey4Ai6g" target="_blank"> 墨子（Mozi）：首个科技领域大规模语言模型</a>
@@ -1687,17 +1690,33 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/PJyFoLP7IBxjbswq-NBEkA" target="_blank"> 更强的Llama 2开源，可直接商用：一夜之间，大模型格局变了</a>
     |
     <a href="https://mp.weixin.qq.com/s/UxrBcPFPn8gvT6tKmLS7CQ" target="_blank"> 放弃评测大模型，普林斯顿大学已经开始评估Prompt了，提出Prompt评估框架</a>
-    |
-    
+    | 
     <!-- 7.20 -->
     <a href="https://mp.weixin.qq.com/s?__biz=MzI5MTgwNTM4Mw==&mid=2247486707&idx=1&sn=8f8964773d94e624291df93fc2ac2b7c&chksm=ec0a4d5bdb7dc44d893883c1dce7e37bc66b7c6aac74eac3194b111c4b4aea9f882d3533fb82&mpshare=1&scene=23&srcid=07209Rb0QIHcmkvMfSp3ovM4&sharer_sharetime=1689844872099&sharer_shareid=9602898a9fe804c3ecc65b6170a8a721#rd" target="_blank"> 大模型微调方法总结</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/BIQtJv2KWRM5CLIomO_2yw" target="_blank"> 斯坦福博士一己之力让Attention提速9倍！FlashAttention燃爆显存，Transformer上下文长度史诗级提升/a>
     |
     <!-- 7.21 -->
     <a href="https://mp.weixin.qq.com/s/C_g4pFZRO_yYwqno4qib1A" target="_blank"> 探究检索增强下的大模型知识边界</a>
     | 
     <a href="https://mp.weixin.qq.com/s/Ns0rohTH0xz3Y2pk2Upxng" target="_blank"> Google提出LaCLIP：大语言模型重写本文输入，让CLIP重焕光彩！</a>
     |
-    <!-- 7.25 -->                            
+    <a href="https://mp.weixin.qq.com/s/OKu4YNKwEmLEgD2YB-VmrQ" target="_blank"> GPT-4「变笨」被斯坦福实锤：短短仨月数学问题错误率暴涨40倍！OpenAI也急了：已开始调查</a>
+    |
+    <!-- 7.22 -->
+    <a href="https://mp.weixin.qq.com/s/lsnk6BVzEI6J0nXKHUiV2w" target="_blank"> ChatGPT又上新了！用户可自定义指令，实现多种人格切换</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Mee7sMq_bxLpIOOr91li9A" target="_blank"> 强推！伯克利AI博士详解Llama 2的技术细节</a>
+    | 
+    <!-- 7.24 -->
+    <a href="https://mp.weixin.qq.com/s/JsCoUcuCg4ylKkPMvNouEw" target="_blank"> 伦敦大学、MetaAI、StabilityAI联合发布70页综述，盘点大模型的16大挑战</a>
+    | 
+    <!-- 7.25 -->  
+    <!-- 7.26 -->
+    <a href="https://mp.weixin.qq.com/s/RLUB-6Wbb8w-oM5WLwvDCQ" target="_blank"> 比StarCoder更强悍，AI代码助手CodeGeeX2-6B开源，ChatGLM2 为基座</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/-PAgC9e_aASFdg_EFLSogA" target="_blank"> Attention机制竟有bug！Softmax是罪魁祸首，影响所有Transformer模型</a>
+    |                           
 </br>
 </br>
 AI论文: 
@@ -2717,7 +2736,9 @@ AI Big Model:
     <a href="https://mp.weixin.qq.com/s/LCGQyNA6sHcdfIIARSNlww" target="_blank">3090单卡5小时，每个人都能训练专属ChatGPT，港科大开源LMFlow</a>
     |
     <a href="https://mp.weixin.qq.com/s?__biz=MzI5MTgwNTM4Mw==&mid=2247486707&idx=1&sn=8f8964773d94e624291df93fc2ac2b7c&chksm=ec0a4d5bdb7dc44d893883c1dce7e37bc66b7c6aac74eac3194b111c4b4aea9f882d3533fb82&mpshare=1&scene=23&srcid=07209Rb0QIHcmkvMfSp3ovM4&sharer_sharetime=1689844872099&sharer_shareid=9602898a9fe804c3ecc65b6170a8a721#rd" target="_blank">大模型微调方法总结</a>
-    |                          
+    |
+    <a href="https://mp.weixin.qq.com/s/yNi1ehpHT8v2VnmNlZTBaw" target="_blank">降龙十八掌：这套优化transformer内存占用的组合技值得收藏</a>
+    |                           
 <!--   <br /> -->
 
 <br />
