--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -479,8 +479,12 @@
     |
     <a href="https://mp.weixin.qq.com/s/4gZRZvRZMkuLOh_GDlvROQ" target="_blank">信工所14篇论文被顶级国际会议ACL 2023录用，一文速览！</a>
     |
+    <a href="https://mp.weixin.qq.com/s/4GfGE-J7dOSVAcQv41ncAw" target="_blank">ACL'23颁奖井喷！史无前例75篇论文上榜，华人面孔占据半壁江山</a>
+    |
     <a href="https://mp.weixin.qq.com/s/bMESRXRVl0fPIYwsW3KoGg" target="_blank">自然语言处理顶会ACL 2023收录西湖大学工学院最新成果</a>
     |
+    <a href="https://mp.weixin.qq.com/s/XoLIi2HUKBYyW46y7mby1Q" target="_blank">论文导读 | ACL-2023 文档级事件抽取 (1)</a>
+    |   
     <a href="https://mp.weixin.qq.com/s/lWumoCqKnkPrMBjpPuGM1w" target="_blank">多篇论文入选ICASSP 2023！火山语音有效解决多类实践问题</a>
     |
     <a href="https://mp.weixin.qq.com/s/Prg_iwcbbC7QMup_i1ZHzw" target="_blank">LeCun力挺，马毅教授五年集大成之作：完全数学可解释的白盒Transformer，性能不输ViT</a>
@@ -1716,7 +1720,18 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/RLUB-6Wbb8w-oM5WLwvDCQ" target="_blank"> 比StarCoder更强悍，AI代码助手CodeGeeX2-6B开源，ChatGLM2 为基座</a>
     | 
     <a href="https://mp.weixin.qq.com/s/-PAgC9e_aASFdg_EFLSogA" target="_blank"> Attention机制竟有bug！Softmax是罪魁祸首，影响所有Transformer模型</a>
-    |                           
+    |
+    <!-- 7.31 -->
+    <a href="https://mp.weixin.qq.com/s/gsBgjVmtJdDvK5rhbFP9aA" target="_blank"> 谷歌 DeepMind 宣布推出 RT-2：全球第一个控制机器人的视觉 - 语言 - 动作（VLA）模型</a>
+    |
+    <!-- 8.1 -->
+    <a href="https://mp.weixin.qq.com/s/twS9En83b8WCewYX_8IobQ" target="_blank">中医大模型来了！临床诊疗和养生调理一步到位，发布现场训练过程大公开，超1100万条知识图谱数据</a>
+    | 
+    <a href="https://zhuanlan.zhihu.com/p/647158457?utm_medium=social&utm_oi=35893092024320&utm_psn=1669809028556533760&utm_source=wechat_session&s_r=0" target="_blank">NewHope——具有99% GPT-4编程能力的开源模型</a>
+    |
+    <!-- 8.4 -->
+    <a href="https://mp.weixin.qq.com/s/bJ6Q1eKGuQTRg27hpMEEmA" target="_blank">权重量化对大模型涌现能力的影响</a>
+    |                              
 </br>
 </br>
 AI论文: 
@@ -2786,6 +2801,8 @@ AI Big Model:
     <a href="https://mp.weixin.qq.com/s/I1U_BGCj_BSRNexhRFTm_Q" target="_blank">谷歌大动作！TPU超算系统大升级，全面超越英伟达A100</a>
     |
     <a href="https://mp.weixin.qq.com/s/C-dTAnqaMWE3EVsrQJkGZA" target="_blank">免费送GPU算力，轻松跑模型！趋动云GPU平台推荐</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/kNE7mjEd2gVCm0hfRTPAdg" target="_blank">Jupyter大升级，可与大模型交互，已开源</a>
     |
 <!--   <br /> -->
 
