--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -484,7 +484,9 @@
     <a href="https://mp.weixin.qq.com/s/bMESRXRVl0fPIYwsW3KoGg" target="_blank">自然语言处理顶会ACL 2023收录西湖大学工学院最新成果</a>
     |
     <a href="https://mp.weixin.qq.com/s/XoLIi2HUKBYyW46y7mby1Q" target="_blank">论文导读 | ACL-2023 文档级事件抽取 (1)</a>
-    |   
+    |
+    <a href="https://mp.weixin.qq.com/s/mPkYZwdz1UJAC6DIAqk6Ug" target="_blank">KDD 2023奖项出炉：港中文、港科大等获最佳论文奖，GNN大牛Leskovec获创新奖</a>
+    |
     <a href="https://mp.weixin.qq.com/s/lWumoCqKnkPrMBjpPuGM1w" target="_blank">多篇论文入选ICASSP 2023！火山语音有效解决多类实践问题</a>
     |
     <a href="https://mp.weixin.qq.com/s/Prg_iwcbbC7QMup_i1ZHzw" target="_blank">LeCun力挺，马毅教授五年集大成之作：完全数学可解释的白盒Transformer，性能不输ViT</a>
@@ -1729,8 +1731,21 @@ ChatGPT:
     | 
     <a href="https://zhuanlan.zhihu.com/p/647158457?utm_medium=social&utm_oi=35893092024320&utm_psn=1669809028556533760&utm_source=wechat_session&s_r=0" target="_blank">NewHope——具有99% GPT-4编程能力的开源模型</a>
     |
+    <!-- 8.3 -->
+    <a href="https://mp.weixin.qq.com/s/jHCbqgp5Do_rjkiTd2Ws_g" target="_blank">谷歌创始人布林重返职场，投入研发AI杀手锏！预计下半年推出下一代通用模型『Gemini』，和OpenAI的终局之战！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/LS6YWylk9r425YTvBJ0bYQ" target="_blank">马毅、LeCun联合发布EMP-SSL，突破自监督学习效率极限</a>
+    |   
     <!-- 8.4 -->
     <a href="https://mp.weixin.qq.com/s/bJ6Q1eKGuQTRg27hpMEEmA" target="_blank">权重量化对大模型涌现能力的影响</a>
+    | 
+    <!-- 8.8 -->
+    <a href="https://mp.weixin.qq.com/s/PGsY3vXSdzWn7QFp-4yERw" target="_blank">MetaGPT爆火出圈！2美元就能当老板，GitHub狂揽11.2k星，AI智能体「多面手」诞生</a>
+    | 
+    <!-- 8.9 -->
+    <a href="https://mp.weixin.qq.com/s/8zf2nPZAN89jEDiEJN6ZuQ" target="_blank">OpenAI公布GPT4的爬虫工具-GPTBot，遵守爬虫协议，可用于模型训练</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/UdI9UAe0Uqu48-OxQj_arQ" target="_blank">首个中文版大语言模型综述来了！</a>
     |                              
 </br>
 </br>
