--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -244,7 +244,7 @@
     |
     <a href="https://www.ai-edge.net/" target="_blank">KSEM</a>
     |
-    <a href="" target="_blank">ESWC</a>
+    <a href="https://2024.eswc-conferences.org/" target="_blank">ESWC</a>
     |
     <a href="" target="_blank">PRICAI</a>
     |
