--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -487,6 +487,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/mPkYZwdz1UJAC6DIAqk6Ug" target="_blank">KDD 2023奖项出炉：港中文、港科大等获最佳论文奖，GNN大牛Leskovec获创新奖</a>
     |
+    <a href="https://mp.weixin.qq.com/s/YF8R6SOjkRK9A0_7VLZp-A" target="_blank">论文导读 | ACL-2023 事件检测</a>
+    |    
     <a href="https://mp.weixin.qq.com/s/lWumoCqKnkPrMBjpPuGM1w" target="_blank">多篇论文入选ICASSP 2023！火山语音有效解决多类实践问题</a>
     |
     <a href="https://mp.weixin.qq.com/s/Prg_iwcbbC7QMup_i1ZHzw" target="_blank">LeCun力挺，马毅教授五年集大成之作：完全数学可解释的白盒Transformer，性能不输ViT</a>
@@ -1746,6 +1748,8 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/8zf2nPZAN89jEDiEJN6ZuQ" target="_blank">OpenAI公布GPT4的爬虫工具-GPTBot，遵守爬虫协议，可用于模型训练</a>
     |
     <a href="https://mp.weixin.qq.com/s/UdI9UAe0Uqu48-OxQj_arQ" target="_blank">首个中文版大语言模型综述来了！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/wUuAHsiZJmpCPn_3uvT4Aw" target="_blank">ChatGLM团队发布AI Agent能力评测工具AgentBench：GPT-4一骑绝尘，开源模型表现非常糟糕！</a>
     |                              
 </br>
 </br>
@@ -3484,6 +3488,13 @@ NLP Field：
 <!-- Southern University of Science and Technology (SUSTech) -->
     <a href="https://ghchen.me/" target="_blank">Guanhua Chen</a>
     |    
+  <br />
+  <br />
+Dependency Analytics Field：
+<br />
+<!-- Alibaba DAMO Academy -->
+    <a href="https://jiangyong.site/" target="_blank">Yong Jiang</a>
+    |
   <br />
   <br />
 Language Model Field：
