--- a/pages/publications.html
+++ b/pages/publications.html
@@ -90,13 +90,13 @@
 <hr align="left" width="100%">
 <h4>2023</h4>
 <ol start="1">
-    <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Ling Zhan, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href=""><strong><font color= "#00066f">TemT: A New Temporal Knowledge Graph Completion Method with Transformer Hawkes Process and Random Walk Aggregation Strategy</font></strong></a>. The 2023 International Conference on Neural Information Processing (ICONIP). Changsha (<a href="http://www.iconip2023.org/index.html"><strong><u><font color="#874e26">ICONIP-23</font></u></strong></a>). China, November 20-23, 2023. (CCF-C)
+    <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Ling Zhan, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href=""><strong><font color= "#00066f">TemT: A New Temporal Knowledge Graph Reasoning Model with Transformer Hawkes Process and Graph-Based Random Walk Aggregation Strategy</font></strong></a>. The 2023 International Conference on Neural Information Processing (ICONIP). Changsha (<a href="http://www.iconip2023.org/index.html"><strong><u><font color="#874e26">ICONIP-23</font></u></strong></a>). China, November 20-23, 2023. (CCF-C)
 
 
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese) (To be Submitted)</li>
 
-    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, Chunyan Liu, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://www.cse.cqu.edu.cn/info/2096/4505.htm" target="_blank">Yan Lei</a>*, <strong><font color= "#00066f">A Systematical Study on Dynamic Fault Localization for Machine Learning Methods</font></strong></a>. (To be Submitted)</li>
 
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, Chunyan Liu, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://www.cse.cqu.edu.cn/info/2096/4505.htm" target="_blank">Yan Lei</a>*, <strong><font color= "#00066f">A Systematical Study on Dynamic Fault Localization for Machine Learning Methods</font></strong></a>. (To be Submitted)</li>
 </ol>
 
 
